# SoundTouchWrapper

./: .gitignore  CMakeLists.txt  README.md  format_code.sh  run_test.sh  run_valgrind_test.sh
include/: RunParameters.h  SoundStretch.h  WavFile.h
src/: CMakeLists.txt  RunParameters.c  SoundStretch.c  WavFile.c
src/soundtouch/: AAFilter.cpp  AAFilter.h  CMakeLists.txt  FIFOSampleBuffer.cpp  FIFOSampleBuffer.h  FIFOSamplePipe.h  FIRFilter.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.cpp  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  PeakFinder.cpp  PeakFinder.h  RateTransposer.cpp  RateTransposer.h  STTypes.h  SoundTouch.cpp  SoundTouch.h  SoundTouch_Wrapper.cpp  SoundTouch_Wrapper.h  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  soundtouch_config.h  sse_optimized.cpp
test/: CMakeLists.txt  test.c
